--- a/src/app/courses/courses/courses.component.html
+++ b/src/app/courses/courses/courses.component.html
@@ -5,52 +5,13 @@
     <span>Cursos Disponiveis</span>
   </mat-toolbar>
 
-  <div *ngIf="courses$ | async as courses; else loading">
-    <table mat-table [dataSource]="courses" class="mat-elevation-z8">
+  <div class= "column-flex mat-elevation-z8">
+    <app-courses-list *ngIf="courses$ | async as courses; else loading" [courses]="courses"></app-courses-list>
 
-      <!-- name Column -->
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> Curso </th>
-        <td mat-cell *matCellDef="let course"> {{course.name}} </td>
-      </ng-container>
-
-      <!-- category Column -->
-      <ng-container matColumnDef="category">
-        <th mat-header-cell *matHeaderCellDef> Categoria </th>
-        <td mat-cell *matCellDef="let course"> {{course.category}}
-          <mat-icon aria-hidden="false" aria-label="Example home icon"
-            fontIcon="{{course.category | category}}"></mat-icon>
-        </td>
-      </ng-container>
-
-      <!-- actions Column -->
-      <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef>
-          <button mat-mini-fab color="accent" aria-label="Adicionar um curso" (click)="onAdd()">
-            <mat-icon>add</mat-icon>
-          </button>
-        </th>
-        <td *matCellDef="let course">
-          <button mat-icon-button color="primary" aria-label="Editar curso">
-            <mat-icon>edit</mat-icon>
-          </button>
-
-          <button mat-icon-button  aria-label="Remover curso">
-            <mat-icon color="warn">delete</mat-icon>
-          </button>
-        </td>
-
-      </ng-container>
-
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
+    <ng-template #loading>
+      <div class="loading-spinner">
+        <mat-spinner></mat-spinner>
+      </div>
+    </ng-template>
   </div>
-
-  <ng-template #loading>
-    <div class="loading-spinner">
-      <mat-spinner></mat-spinner>
-    </div>
-  </ng-template>
-
 </mat-card>
